# mangochill

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs  flake.nix  mangochill.capnp  next.md
.github/actions/nix/: action.yml
.github/workflows/: conventional-commits.yaml  lint.yaml  tests.yaml
benches/: README.md  capture.sh  scratch.rs
benches/data/: 1kHz-mouse-busy-feed.bin.zstd  1kHz-mouse-spinning-clicking.bin.zstd  dualsense-chaos-evabs-evkey.bin.zstd  dualsense-motion-accelerometer-evabs.bin.zstd
nix/: module.nix
notebook/: analysis.py  devenv.nix  pyproject.toml  replay.py
notebook/files/: mouse-sample.ndjson
notebook/layouts/: analysis.grid.json
src/: bootstrap.rs  client.rs  ewm.rs  fps_limiter.rs  gamescope.rs  input_parsing.rs  lib.rs  raw_export.rs  replay.rs  scratch.rs  server.rs
wasm-playground/: Cargo.toml
wasm-playground/src/: lib.rs
